# hibachi

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
crates/batcher/: Cargo.toml
crates/batcher/src/: item_stream.rs  lib.rs
crates/batcher/src/async/: batcher.rs  item_stream.rs  mod.rs
crates/burn-batcher/: Cargo.toml
crates/burn-batcher/src/: autoregressive.rs  batch_item.rs  lib.rs  tensor.rs
crates/burn-batcher/src/burn/: autoregressive.rs  batch_item.rs  forward.rs  mod.rs  queue_item.rs
crates/hibachi/: Cargo.toml  README.md
crates/hibachi-burn/: Cargo.toml
crates/hibachi-burn/src/: autoregressive.rs  batch_item.rs  forward.rs  lib.rs  queue_item.rs  tensor.rs
crates/hibachi-candle/: Cargo.toml
crates/hibachi-candle/src/: autoregressive.rs  batch_item.rs  forward.rs  lib.rs  queue_item.rs  tensor.rs
crates/hibachi-core/: Cargo.toml
crates/hibachi-core/src/: autoregressive.rs  autoregressive_batcher.rs  batch_item.rs  batcher.rs  item_stream.rs  lib.rs  queue_item.rs  tensor.rs
crates/hibachi-core/src/backend/: candle.rs  core_trait.rs  mod.rs
crates/hibachi-core/src/communcation/: batch_item.rs  mod.rs  pill.rs
crates/hibachi/src/: constant.rs  lib.rs  tensor.rs
crates/hibachi/src/autoregressive/: batcher.rs  core_trait.rs  handler.rs  item_stream.rs  mod.rs  queue_item.rs
crates/hibachi/src/backend/: burn.rs  candle.rs  core_trait.rs  mock_tensor.rs  mod.rs
crates/hibachi/src/communcation/: batch_item.rs  item_stream.rs  pill.rs  queue_item.rs
crates/hibachi/src/communication/: batch_item.rs  mod.rs
crates/hibachi/src/core/: batch.rs  batcher.rs  core_trait.rs  handler.rs  mod.rs  worker.rs
crates/hibachi/src/feedforward/: batcher.rs  core_trait.rs  handler.rs  item.rs  mod.rs  queue_item.rs
crates/hibachi/src/tensor/: constant.rs  mod.rs  operations.rs
examples/burn-wgpu-backend/: Cargo.toml
examples/burn-wgpu-backend/src/: main.rs  model.rs
examples/candle-example/: Cargo.toml
examples/candle-example-feedforward/: Cargo.toml
examples/candle-example-feedforward/src/: main.rs  model.rs
examples/candle-example/src/: main.rs  model.rs
examples/candle-transformer/: Cargo.toml
examples/candle-transformer/src/: main.rs  model.rs  token_output_stream.rs
examples/run-burn/: Cargo.toml
examples/run-burn/src/: main.rs  model.rs
examples/test-candle-backend/: Cargo.toml
examples/test-candle-backend/src/: main.rs  model.rs
