[workspace]
members = [
    "crates/*",
    "examples/test-candle-backend"
]
resolver = "2"


[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
version = "0.1.0"


[workspace.dependencies]
async-trait = { version = "0.1.88" }
futures = {version = "0.3.31" }
tokio = { version = "1.44.1", features = ["sync", "time", "rt"] }
