[workspace]
members = [
    "crates/*",
    "examples/*"
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
readme = "README.md"
version = "0.1.0"

[workspace.dependencies]
candle-core = { version = "0.8.4" }
burn = { version = "0.16.1" }
async-trait = { version = "0.1.88" }
futures = {version = "0.3.31" }
tokio = { version = "1.44.1"}

[[example]]
name = "burn"
path = "examples/burn-wgpu-backend"

[[example]]
name = "candle"
path = "examples/candle-example"

[[example]]
name = "candle transformer"
path = "examples/candle-transformer"


