[package]
name = "batcher"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
async = ["dep:tokio", "dep:futures", "dep:async-trait"]

[dependencies]
tokio = { version = "1.44.1", optional = true, features = ["sync"]}
futures = {version = "0.3.31", optional = true}
async-trait = { version = "0.1.88", optional = true }

