[package]
name = "hibachi-candle"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
candle-core = { version = "0.8.4" }
hibachi-core = { version = "0.1.0", path = "../hibachi-core" }
