[package]
name = "hibachi-core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
candle = ["dep:candle-core"]

[dependencies]
candle-core = { version = "0.8.4" , optional = true }
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }
