[package]
name = "hibachi"
version = "0.1.0"
edition = "2021"
resolver = "2"

[features]
candle = ["dep:candle-core"]
burn = ["dep:burn"]
autoregressive = []
feedforward = []

[dependencies]
candle-core = { workspace = true, optional = true }
burn = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time", "rt"] }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "test-util", "macros"] }
burn = { workspace = true, features = ["ndarray"]}
candle-core = { workspace = true }
