[package]
name = "hibachi"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
publish = true


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
candle = ["dep:candle-core"]
burn = ["dep:burn"]
autoregressive = []
feedforward = []

[dependencies]
candle-core = { workspace = true, optional = true }
burn = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "time", "rt", "macros"] }
futures = { workspace = true }
async-trait = { workspace = true }
uuid = { version = "1.16.0", features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "time", "rt", "test-util", "macros"] }
burn = { workspace = true, features = ["ndarray"]}
candle-core = { workspace = true }


[[example]]
name = "burn"
path = "../../examples/burn-wgpu-backend"

[[example]]
name = "candle"
path = "../../examples/candle-example"

[[example]]
name = "candle transformer"
path = "../../examples/candle-transformer"

