[package]
name = "burn-wgpu-backend"
version = "0.1.0"
edition = "2024"
publish = false

[package.metadata.docs.rs]
disabled = true

[dependencies]
hibachi = { version = "0.1.0", path = "../../crates/hibachi", features = ["burn", "autoregressive"] }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros"] }
burn = { workspace = true, features = ["wgpu"]}
futures = { workspace = true }
async-trait = { workspace = true }
rand = "0.8.5"
