[package]
name = "burn-wgpu-backend"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
publish = false

[package.metadata.docs.rs]
disabled = true

[dependencies]
hibachi = { version = "0.1.0", path = "../../crates/hibachi", features = ["burn", "autoregressive"] }
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros"] }
burn = { workspace = true, features = ["wgpu"]}
futures = { workspace = true }
async-trait = { workspace = true }
rand = "0.8.5"
