[package]
name = "candle-example"
edition.workspace = true
license.workspace = true
readme.workspace = true
version.workspace = true
publish = false

[package.metadata.docs.rs]
disabled = true

[dependencies]
candle-core = {workspace = true}
hibachi = {version = "0.1.0", path = "../../crates/hibachi", features = ["candle", "autoregressive"]}
tokio = { workspace = true, features = ["sync", "rt", "rt-multi-thread", "macros"] }
futures = { workspace = true }
async-trait = { workspace = true }
rand = "0.8.5"
